# fix2xml

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO
spec/fix/: FIX50SP2.xml
spec/xsd/: fixml-allocation-base-5-0-SP2.xsd  fixml-allocation-impl-5-0-SP2.xsd  fixml-application-base-5-0-SP2.xsd  fixml-application-impl-5-0-SP2.xsd  fixml-businessreject-base-5-0-SP2.xsd  fixml-businessreject-impl-5-0-SP2.xsd  fixml-collateral-base-5-0-SP2.xsd  fixml-collateral-impl-5-0-SP2.xsd  fixml-components-base-5-0-SP2.xsd  fixml-components-impl-5-0-SP2.xsd  fixml-confirmation-base-5-0-SP2.xsd  fixml-confirmation-impl-5-0-SP2.xsd  fixml-crossorders-base-5-0-SP2.xsd  fixml-crossorders-impl-5-0-SP2.xsd  fixml-datatypes-5-0-SP2.xsd  fixml-fields-base-5-0-SP2.xsd  fixml-fields-impl-5-0-SP2.xsd  fixml-indications-base-5-0-SP2.xsd  fixml-indications-impl-5-0-SP2.xsd  fixml-infrastructure-5-0-SP2.xsd  fixml-listorders-base-5-0-SP2.xsd  fixml-listorders-impl-5-0-SP2.xsd  fixml-main-5-0-SP2.xsd  fixml-marketdata-base-5-0-SP2.xsd  fixml-marketdata-impl-5-0-SP2.xsd  fixml-marketstructure-base-5-0-SP2.xsd  fixml-marketstructure-impl-5-0-SP2.xsd  fixml-metadata-5-0-SP2.xsd  fixml-multilegorders-base-5-0-SP2.xsd  fixml-multilegorders-impl-5-0-SP2.xsd  fixml-network-base-5-0-SP2.xsd  fixml-network-impl-5-0-SP2.xsd  fixml-newsevents-base-5-0-SP2.xsd  fixml-newsevents-impl-5-0-SP2.xsd  fixml-order-base-5-0-SP2.xsd  fixml-order-impl-5-0-SP2.xsd  fixml-ordermasshandling-base-5-0-SP2.xsd  fixml-ordermasshandling-impl-5-0-SP2.xsd  fixml-partiesreference-base-5-0-SP2.xsd  fixml-partiesreference-impl-5-0-SP2.xsd  (+17 more)
src/: CMakeLists.txt
src/converter/: CMakeLists.txt  fix_helper.cxx  fix_helper.hxx  fixml2fix_converter.cxx  fixml2fix_converter.hxx  xml_element_helper.cxx  xml_element_helper.hxx
src/data/: CMakeLists.txt  fix_types.cxx  fix_types.hxx  fixml_data.cxx  fixml_data.hxx  fixml_type.cxx  fixml_type.hxx  xml_element.cxx  xml_element.hxx
src/fix/: CMakeLists.txt  fix_component_parser.cxx  fix_component_parser.hxx  fix_dico_container.cxx  fix_dico_container.hxx  fix_field_parser.cxx  fix_field_parser.hxx  fix_message_parser.cxx  fix_message_parser.hxx  fix_parser.cxx  fix_parser.hxx
src/fixml/: CMakeLists.txt  fixml_dico_container.cxx  fixml_dico_container.hxx  fixml_dico_validator.cxx  fixml_dico_validator.hxx  fixml_parser.cxx  fixml_parser.hxx  fixml_xsd_parser.cxx  fixml_xsd_parser.hxx  xsd_annotation_parser.cxx  xsd_annotation_parser.hxx  xsd_typedefinition_parser.cxx  xsd_typedefinition_parser.hxx
src/samples/: CMakeLists.txt  fix2fixml_example.cxx  fixml2fix_example.cxx  xsd_parser.cxx
src/util/: CMakeLists.txt  fix2xml_utils.hxx  fix_env.cxx  fix_env.hxx  xml_env.hxx  xml_helper.cxx  xml_helper.hxx  xml_string.cxx  xml_string.hxx
test/: CMakeLists.txt  fix2xml_test.cxx  test_main.cxx
test/data/: CMakeLists.txt  test_fixml_types.cxx  test_xml_element.cxx
test/fix/: test_fix_parser.cxx
test/fixml/: test_fixml_annotation_parser.cxx  test_fixml_dico.cxx
test/res/: fix-BC.xml  fixml-with-four-types.xsd
test/xsd_files/: fixml-empty.xsd
tools/: CMakeLists.txt  field_helper.cxx  field_helper.hxx  fix2xml_test_generator.cxx  generation_util.cxx  generation_util.hxx  test_generator.cxx  test_generator.hxx  test_generator_fix2xml.cxx  test_generator_fix2xml.hxx  test_generator_main.cxx  test_generator_xml2fix.cxx  test_generator_xml2fix.hxx  test_util.hxx
